# musicpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  xmake.lua
example/: song.cpp
include/musicpp/: chord_sequence.hpp  chords.hpp  degree.hpp  duration.hpp  intervals.hpp  melody.hpp  musicpp.hpp  notes.hpp  progressions.hpp  scales.hpp  timing.hpp
test/: chord_sequence_test.cpp  chords_test.cpp  degree_test.cpp  duration_test.cpp  intervals_test.cpp  melody_test.cpp  notes_test.cpp  progressions_test.cpp  scales_test.cpp  timing_test.cpp
